Mon Aug  2 17:35:48 1993  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* config/obj-ecoff.c (get_tag): Save tag name in permanent memory
	and in hash_ptr->string.

	* app.c (do_scrub_next_char): Reset state to 0 after .appline if
	file name is not seen.

Thu Jul 29 22:21:28 1993  Ian Lance Taylor  (ian@cygnus.com)

	* write.c: Don't use short int in a prototype.

	* expr.c (operand): Make return value simply depend on contents of
	returned expression.

Thu Jul 29 18:38:37 1993  david d `zoo' zuhn  (zoo@rtl.cygnus.com)

	* configure.in: sparc*-aout and sparc*-vxworks are BFD assemblers

Thu Jul 29 18:38:37 1993  david d `zoo' zuhn  (zoo@rtl.cygnus.com)

	* config/ho-sunos.h: remove some old function decls that conflict
	w/ ANSI, and which weren't needed anyway

Wed Jul 28 16:34:55 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* config/obj-elf.h (obj_frob_symbol): Renamed from tc_frob_symbol,
	and disabled since it breaks Ian's new symbol-value code.

	* expr.c (integer_constant): Accept more digits if BFD64.

Wed Jul 28 11:30:05 1993  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* config/tc-m68k.c (m68k_ip): If we have a normal constant when we
	expect a bignum, turn it into a bignum.  Output extra zeroes
	before a short bignum, rather than after.

Tue Jul 27 15:54:27 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* symbols.c (symbol_new): Conditionalize verify_symbol_chain call
	on DEBUG_SYMS, not DEBUG.
	(symbol_remove): Likewise.
	(symbol_insert): Likewise.

Tue Jul 27 08:45:05 1993  Ian Lance Taylor  (ian@cygnus.com)

	* config/tc-mips.c (mips_optimize): New static variable.
	(append_insn): If mips_optimize == 0, always insert NOP
	instructions.  If mips_optimize < 2, don't swap branches.
	(md_parse_option): If -Ox or -gx, set mips_optimize accordingly.

Mon Jul 26 18:02:43 1993  K. Richard Pixley  (rich@sendai.cygnus.com)

	* Makefile.in (clean): if testsuite does not exist, then skip it.
